# MPI_code

./: README.md
codes_parallel_tris/: .gitignore  Makefile  common.c  common.h  gen_code.sh
codes_parallel_tris/libs/: lea_png.c  lea_png.h  makefile
codes_parallel_tris/pair_impair/: Makefile  batch.sh  pair_impair  pair_impair.c  pair_impair.h  result_pair_impair.csv
codes_parallel_tris/tri_fusion/: Makefile  batch.sh  result_tri_fusion.csv  tri_fusion  tri_fusion.c  tri_fusion.h
codes_sequentiel/: create_matrix.c  create_matrix.h  create_vector.c  create_vector.h  fractal.c  fractal_with_complex.c  lea_png.h  merge_sort  pair_impair.c  parallelized_fractal.c  parity.c  tri_fusion.c
fractales_automate/: lea_png.c  makefile  parallelized_GOL_optimized.c  parallelized_cellular_automate.c
plots/plot_result/: pyproject.toml
plots/plot_result/plot_result/: gen_graph.py
